added stock room

--- a/GameOff2023/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GameOff2023/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -315,7 +315,7 @@ CBP_Station_Baker_C=PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrap
 CBP_Station_Cutter_C=PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.StationStructure,StaticMeshComponent.Collision.Collision
 CBP_Station_Packer_C=PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.StationStructure,StaticMeshComponent.Collision.Collision
 StaticMesh=StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Transform
-MeshNaniteSettings=
+MeshNaniteSettings=StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Transform
 SceneComponent=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.Station Costs,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.PlaceableObjectStructure,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.MonthSchedule,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,PropertyWrapper.DefaultValueCategory.CommerceTracker,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 BP_Conveyor_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.StationStructure
 StaticMeshActor=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.Station Costs,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.PlaceableObjectStructure,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.MonthSchedule,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,PropertyWrapper.DefaultValueCategory.CommerceTracker,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
@@ -427,7 +427,7 @@ LastLevel=/Game/Map/MainMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
+Object="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 CapsuleComponent="\"Object\" "
@@ -2587,8 +2587,10 @@ StaticMeshActor.RayTracing=True
 StaticMeshActor.LevelInstance=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=StaticMeshEditor
+RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
@@ -2617,7 +2619,6 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2717,35 +2718,36 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/Map/Overworld.Overworld", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Assets/cookie_station3_basic
-MRUItem1=/Game/Assets/cookie_station2_basic
-MRUItem2=/Game/Assets/cookie_station1_basic
-MRUItem3=/Game/WorldBuilder/BP_FactoryFloorTile
-MRUItem4=/Game/Materials/floorMat
-MRUItem5=/Game/Materials/M_Conveyor
-MRUItem6=/Game/Assets/conveyer_L
-MRUItem7=/Game/Assets/black
-MRUItem8=/Game/Materials/MI_Solid_End
-MRUItem9=/Game/Materials/MI_SolidDarkGreen
-MRUItem10=/Game/PlaceableObjects/BP_Output
-MRUItem11=/Game/PlaceableObjects/CBP_PlaceableObject_Station
-MRUItem12=/Game/UI/BP_PlayerUI
-MRUItem13=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Packer
-MRUItem14=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Baker
-MRUItem15=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Prepper
-MRUItem16=/Game/UI/WBP_CurrencyText
-MRUItem17=/Game/UI/WBP_LoadingBar
-MRUItem18=/Game/UI/WBP_GoodsStackSize
-MRUItem19=/Game/PlaceableObjects/BP_PlaceableObject
-MRUItem20=/Game/Goods/BP_Goods
-MRUItem21=/Game/TopDown/Blueprints/BP_FixedTopDownCamera
-MRUItem22=/Game/_Main/Enums/E_GoodsStatus
-MRUItem23=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem24=/Game/TopDown/Input/IMC_Default
-MRUItem25=/Game/TopDown/Input/Actions/IA_LeftMouseHold
-MRUItem26=/Game/TopDown/Input/Actions/IA_LeftMouseClick
-MRUItem27=/Game/UI/WBP_SelectedStation
-MRUItem28=/Game/Goods/CBP_Goods_Baked
+MRUItem0=/Game/Assets/stockroom
+MRUItem1=/Game/Assets/truck
+MRUItem2=/Game/Assets/cookie_station3_basic
+MRUItem3=/Game/Assets/cookie_station2_basic
+MRUItem4=/Game/Assets/cookie_station1_basic
+MRUItem5=/Game/WorldBuilder/BP_FactoryFloorTile
+MRUItem6=/Game/Materials/floorMat
+MRUItem7=/Game/Materials/M_Conveyor
+MRUItem8=/Game/Assets/conveyer_L
+MRUItem9=/Game/Assets/black
+MRUItem10=/Game/Materials/MI_Solid_End
+MRUItem11=/Game/Materials/MI_SolidDarkGreen
+MRUItem12=/Game/PlaceableObjects/BP_Output
+MRUItem13=/Game/PlaceableObjects/CBP_PlaceableObject_Station
+MRUItem14=/Game/UI/BP_PlayerUI
+MRUItem15=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Packer
+MRUItem16=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Baker
+MRUItem17=/Game/PlaceableObjects/Stations/CBP_PlaceableObject_Station_Prepper
+MRUItem18=/Game/UI/WBP_CurrencyText
+MRUItem19=/Game/UI/WBP_LoadingBar
+MRUItem20=/Game/UI/WBP_GoodsStackSize
+MRUItem21=/Game/PlaceableObjects/BP_PlaceableObject
+MRUItem22=/Game/Goods/BP_Goods
+MRUItem23=/Game/TopDown/Blueprints/BP_FixedTopDownCamera
+MRUItem24=/Game/_Main/Enums/E_GoodsStatus
+MRUItem25=/Game/TopDown/Blueprints/BP_TopDownController
+MRUItem26=/Game/TopDown/Input/IMC_Default
+MRUItem27=/Game/TopDown/Input/Actions/IA_LeftMouseHold
+MRUItem28=/Game/TopDown/Input/Actions/IA_LeftMouseClick
+MRUItem29=/Game/UI/WBP_SelectedStation
 
 [AssetEditorToolkitTabLocation]
 /Game/CameraPawn.CameraPawn=0
@@ -2867,6 +2869,7 @@ MRUItem28=/Game/Goods/CBP_Goods_Baked
 /Game/Materials/MI_Solid_End.MI_Solid_End=1
 /Game/Assets/black.black=1
 /Game/Materials/NewMaterial.NewMaterial=1
+/Game/Assets/truck.truck=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
