added stock room

--- a/GameOff2023/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GameOff2023/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -317,6 +317,8 @@ CBP_Station_Packer_C=PropertyWrapper.DefaultValueCategory.StationMap,PropertyWra
 StaticMesh=StaticMesh.ImportSettings.Mesh,StaticMesh.ImportSettings.Material,StaticMesh.ImportSettings.Transform
 MeshNaniteSettings=
 SceneComponent=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.Station Costs,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.PlaceableObjectStructure,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.MonthSchedule,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,PropertyWrapper.DefaultValueCategory.CommerceTracker,PostProcessVolume.Lens.Lens
+SceneComponent=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.Station Costs,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.PlaceableObjectStructure,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.MonthSchedule,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,PropertyWrapper.DefaultValueCategory.CommerceTracker,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
+None=======
 BP_Conveyor_C=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.StationStructure
 StaticMeshActor=StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.Station Costs,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.PlaceableObjectStructure,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.MonthSchedule,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,PropertyWrapper.DefaultValueCategory.CommerceTracker,PostProcessVolume.Lens.Lens
 BP_PlaceableObject_C=PropertyWrapper.DefaultValueCategory.StationMap,PropertyWrapper.DefaultValueCategory.StationStructure,PropertyWrapper.DefaultValueCategory.Station Costs,PropertyWrapper.DefaultValueCategory.PlacementGridMap,PropertyWrapper.DefaultValueCategory.PlaceableObjectStructure,PropertyWrapper.DefaultValueCategory.MinPositionX,PropertyWrapper.DefaultValueCategory.MonthSchedule,PropertyWrapper.DefaultValueCategory.GridLocationStatus,PropertyWrapper.DefaultValueCategory.HeldStationArray,PropertyWrapper.DefaultValueCategory.CommerceTracker,PostProcessVolume.Lens.Lens,K2Node_VariableGet.DefaultValueCategory.StationMap,K2Node_VariableGet.DefaultValueCategory.StationStructure,K2Node_VariableGet.DefaultValueCategory.Station Costs,K2Node_VariableGet.DefaultValueCategory.HeldStationArray,K2Node_VariableGet.DefaultValueCategory.GridLocationStatus,K2Node_VariableGet.DefaultValueCategory.PlaceableObjectStructure,K2Node_VariableGet.DefaultValueCategory.MonthSchedule,K2Node_VariableSet.DefaultValueCategory.HeldStationArray,K2Node_VariableSet.DefaultValueCategory.GridLocationStatus,K2Node_VariableSet.DefaultValueCategory.StationStructure,K2Node_VariableSet.DefaultValueCategory.PlaceableObjectStructure,K2Node_SetFieldsInStruct.PinOptions.ShowPinForProperties,K2Node_BreakStruct.PinOptions.ShowPinForProperties,K2Node_FunctionEntry.Inputs.B93A138642EB9880FBCB6EAEE3D12269,StaticMeshComponent.Collision.Collision
@@ -429,7 +431,7 @@ LastLevel=/Game/Map/MainMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 CapsuleComponent="\"Object\" "
@@ -2634,7 +2636,7 @@ AudioComponent.Cooking=True
 AudioComponent.Events=True
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
@@ -2666,13 +2668,6 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-OpenAssetsAtExit=/Game/UI/BP_PlayerUI.BP_PlayerUI
-OpenAssetsAtExit=/Game/PlaceableObjects/BP_Input.BP_Input
-OpenAssetsAtExit=/Game/PlaceableObjects/CBP_PlaceableObject_Station.CBP_PlaceableObject_Station
-OpenAssetsAtExit=/Game/UI/WBP_CurrencyText.WBP_CurrencyText
-OpenAssetsAtExit=/Game/PlaceableObjects/BP_PlaceableObject.BP_PlaceableObject
-OpenAssetsAtExit=/Game/WorldBuilder/BP_FactoryWallTile.BP_FactoryWallTile
-OpenAssetsAtExit=/Game/Materials/brickwall.brickwall
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2979,6 +2974,8 @@ GraphEditorQuickJumps=()
 
 [RootWindow]
 ScreenPosition=X=384.000 Y=352.000
+ScreenPosition=X=475.000 Y=0.000
+None=======
 WindowSize=X=1273.000 Y=665.000
 InitiallyMaximized=True
 
